<resources>
    <string name="app_name">My City</string>
    <string name="aadhar_card">Aadhar Card:</string>
    <string name="about">About</string>
    <string name="add_area">Add Area</string>
    <string name="add_category">Add Services</string>
    <string name="add_new">Add New</string>
    <string name="add_service_area">Add Service Area</string>
    <string name="address">Address</string>
    <string name="address_compulsory">Address*</string>
    <string name="advertise_with_us">Advertise With Us</string>
    <string name="age">Age</string>
    <string name="back_to_login">Back to Login</string>
    <string name="book_now">Book Now</string>
    <string name="call_now">Call Now</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="category">Category</string>
    <string name="change_password">Change Password</string>
    <string name="city">City</string>
    <string name="city_compulsory">City*</string>
    <string name="com.webandappdevelopment.serviceshop.city.CityItem">City</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="customer">Customer</string>
    <string name="customer_name">Customer Name</string>
    <string name="do_you_have_new_unique_product_or_offer">Do you have new/unique product or offer?</string>
    <string name="do_you_provide_any_services">Do you provide any Services?</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="email">Email</string>
    <string name="email_compulsory">Email*</string>
    <string name="experience">Experience</string>
    <string name="forget_password">Forget Password?</string>
    <string name="forget_password_message">Did you forget your password?</string>
    <string name="login">Login</string>
    <string name="login_here">Login Here</string>
    <string name="login_text_message">Don\'t have a account? </string>
    <string name="logout">Logout</string>
    <string name="manage_photos">Manage Photos</string>
    <string name="manage_profile">Manage Profile</string>
    <string name="manage_rate_list">Manage Rate List</string>
    <string name="mark_approved">Mark Approved</string>
    <string name="mark_completed">Mark Completed</string>
    <string name="marital_status">Marital Status:</string>
    <string name="married">Married</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mobile_number_compulsory">Mobile Number*</string>
    <string name="msg_already_registered">Your Mobile Number is already registered. Please try to login.</string>
    <string name="msg_check_internet_connection">Please check your internet connection.</string>
    <string name="msg_email_success">Email has been sent on your registered mail id. Please check.</string>
    <string name="msg_enter_all_details">Please enter all details.</string>
    <string name="msg_incorrect_password">Oops!! your password is incorrect.</string>
    <string name="msg_invalid_email">Invalid Email Id</string>
    <string name="msg_invalid_mobile_number">Invalid Mobile Number.</string>
    <string name="msg_logout">You have successfully logged out of My City App.</string>
    <string name="msg_new_password_not_match">New Password and Confirm Password does not match.</string>
    <string name="msg_no_service_provider">Oops there are no provider registered yet in your city for this category</string>
    <string name="msg_no_user">Unable to fetch user details.</string>
    <string name="msg_password_doesnot_match">Password and Confirm Password does not match.</string>
    <string name="msg_please_register">You look new!! Please register first to enjoy our app.</string>
    <string name="msg_server_not_responding">Server not responding. Please try again.</string>
    <string name="msg_something_went_wrong">Something went wrong. Please try again later.</string>
    <string name="msg_sp_edit_profile">*Please remember you can only edit photo for one time.</string>
    <string name="msg_update_fail">Failed to update. Please try again later.</string>
    <string name="msg_update_success">Successfully updated.</string>
    <string name="name">Name</string>
    <string name="name_compulsory">Name*</string>
    <string name="new_password">New Password</string>
    <string name="no_image">No Image</string>
    <string name="no_images_found">No images found</string>
    <string name="no_request_found_currently">No request found currently</string>
    <string name="no_result_found">No result found</string>
    <string name="online">online</string>
    <string name="old_password">Old Password</string>
    <string name="password">Password</string>
    <string name="please_enter_area">Please enter Area</string>
    <string name="please_enter_the_area_you_want_to_cover_below">Please enter the area you want to cover below.</string>
    <string name="please_fill_below_content_to_book_your_service_provider_now">Please fill below content to book your service provider now.</string>
    <string name="preferred_date_compulsory">Preferred Date*</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="re_enter_new_password">Re-enter New Password</string>
    <string name="recharge">Recharge</string>
    <string name="register">Register</string>
    <string name="register_now">Register Now</string>
    <string name="registration_message">Are you?</string>
    <string name="registration_now_message">Already a User?</string>
    <string name="reject">Reject</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="select_from_gallery">Select from Gallery:</string>
    <string name="service_area">Service Area</string>
    <string name="service_history">Service History</string>
    <string name="service_provider">Service Provider</string>
    <string name="service_providers_list">Service Providers List</string>
    <string name="service_request">Service Request</string>
    <string name="service_request_compulsory">Service Requests</string>
    <string name="services_offered">Services Offered</string>
    <string name="single">Single</string>
    <string name="state">State</string>
    <string name="state_compulsory">State*</string>
    <string name="submit">Submit</string>
    <string name="support">Support</string>
    <string name="title_about">Know Us</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_explore">My City</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_service_request_list">Service Request List</string>
    <string name="type_service_to_search">Search here…</string>
    <string name="update">Update</string>
    <string name="upload_document">Upload Document</string>
    <string name="upload_images">Open Gallery</string>
    <string name="view">View</string>
    <string name="write_something_about_yourself">Write something about yourself</string>
    <string name="api_aadhar">https://www.app.mycityindia.in/api/upload-aadhar.php</string>
    <string name="api_add_area">https://www.app.mycityindia.in/api/add-area.php</string>
    <string name="api_add_booking">https://www.app.mycityindia.in/api/add-booking.php</string>
    <string name="api_add_services">https://www.app.mycityindia.in/api/add-services.php</string>
    <string name="api_area_list">https://www.app.mycityindia.in/api/area-list.php</string>
    <string name="api_category_list">https://www.app.mycityindia.in/api/category-list.php</string>
    <string name="api_category_list2">https://mycityindia.in/app/api/api2id.php</string>
    <string name="api_change_password">https://www.app.mycityindia.in/api/change-password.php</string>
    <string name="api_delete_area">https://www.app.mycityindia.in/api/delete-area.php</string>
    <string name="api_delete_image">https://www.app.mycityindia.in/api/delete-img.php</string>
    <string name="api_delete_service">https://www.app.mycityindia.in/api/delete-services.php</string>
    <string name="api_edit_profile">https://www.app.mycityindia.in/api/edit-profile.php</string>
    <string name="api_edit_status">https://www.app.mycityindia.in/api/edit-status.php</string>
    <string name="api_forget_password">https://www.app.mycityindia.in/api/forget-password.php</string>
    <string name="api_know_us">https://www.app.mycityindia.in/api/know-us-list.php</string>
    <string name="api_load_category">https://mycityindia.in/app/api/load-category.php</string>
    <string name="api_load_city">https://www.app.mycityindia.in/api/load-city.php</string>
    <string name="api_login">https://www.app.mycityindia.in/api/login.php</string>
    <string name="api_otp_send">https://mycityindia.in/app/api/login_otp_send.php</string>
    <string name="api_varify">https://mycityindia.in/app/api/varify_otp.php</string>
    <string name="api_my_area">https://www.app.mycityindia.in/api/my-area.php</string>
    <string name="api_my_city_list">https://www.app.mycityindia.in/api/my-city-list.php</string>
    <string name="api_my_photos">https://www.app.mycityindia.in/api/load-img.php</string>
    <string name="api_my_request">https://www.app.mycityindia.in/api/my-request.php</string>
    <string name="api_photos">https://www.app.mycityindia.in/api/upload-img.php</string>
    <string name="api_random_ads">https://www.app.mycityindia.in/api/random-ads.php</string>
    <string name="api_reg_user">https://www.app.mycityindia.in/api/user-registration.php</string>
    <string name="api_search">https://www.app.mycityindia.in/api/search.php</string>
    <string name="api_service_list">https://www.app.mycityindia.in/api/service-list.php</string>
    <string name="api_service_request">https://www.app.mycityindia.in/api/service-request.php</string>
    <string name="api_sp_details">https://www.app.mycityindia.in/api/sp-details.php</string>
    <string name="api_sp_list">https://www.app.mycityindia.in/api/sp-list.php</string>
    <string name="api_sp_list2">https://mycityindia.in/app/api/service_provider_list.php</string>
    <string name="api_sp_registration">https://www.app.mycityindia.in/api/sp-registration.php</string>
    <string name="api_sp_update">https://www.app.mycityindia.in/api/sp-update.php</string>
    <string name="api_update_status">https://www.app.mycityindia.in/api/update-status.php</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>