<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login_rootLayout"
    tools:context=".LoginMech.LoginActivity">

    <ImageView
        android:id="@+id/login_ivLogo"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/final_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <RadioGroup
            android:id="@+id/login_radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:background="@drawable/white_round_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_etMobile">

            <RadioButton
                android:id="@+id/login_rbCustomer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:fontFamily="@font/abeezee"
                android:layout_marginEnd="8dp"/>

            <RadioButton
                android:id="@+id/login_rbServiceProvider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_provider"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:fontFamily="@font/abeezee"
                android:layout_marginStart="8dp"/>
        </RadioGroup>

        <EditText
            android:id="@+id/login_etMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/white_round_bg"
            android:fontFamily="@font/abeezee"
            android:hint="@string/mobile_number"
            android:textColorHint="#716F6F"
            android:inputType="phone"
            android:paddingHorizontal="5dp"
            android:paddingVertical="10dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/login_etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/white_round_bg"
            android:fontFamily="@font/abeezee"
            android:hint="@string/password"
            android:textColorHint="#716F6F"
            android:inputType="textPassword"
            android:paddingHorizontal="5dp"
            android:paddingVertical="10dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/red_round_bg"
            android:paddingHorizontal="5dp"
            android:paddingVertical="10dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:fontFamily="@font/abeezee"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_radioGroup" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_btnForgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:background="@android:color/transparent"
                android:paddingHorizontal="5dp"
                android:paddingVertical="10dp"
                android:text="@string/forget_password"
                android:fontFamily="@font/abeezee"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_btnLogin"
                android:layout_gravity="end"
                android:visibility="visible"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/login_tvTextContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text_message"
            android:textAlignment="viewEnd"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/abeezee" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btnRegisterNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/register_now"
            android:textAlignment="viewStart"
            android:textColor="@color/theme_red"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:fontFamily="@font/abeezee"
            android:layout_marginHorizontal="5dp"
            app:layout_constraintStart_toEndOf="@id/login_tvTextContent"
            app:layout_constraintTop_toBottomOf="@+id/login_btnLogin" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/login_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/theme_grey"
        android:translationZ="@dimen/cardview_compat_inset_shadow"
        android:visibility="gone"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>