<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/forgetPassword_rootLayout"
    tools:context=".LoginMech.ForgetPasswordActivity">

    <ImageView
        android:id="@+id/forgetPassword_ivLogo"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:src="@drawable/final_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:id="@+id/forgetPassword_tvTextContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:text="@string/forget_password_message"
        android:textSize="18sp"
        android:paddingHorizontal="5dp"
        android:paddingVertical="10dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:fontFamily="@font/abeezee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgetPassword_ivLogo"/>

    <EditText
        android:id="@+id/forgetPassword_etMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/white_round_bg"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:paddingHorizontal="5dp"
        android:paddingVertical="10dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:fontFamily="@font/abeezee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgetPassword_tvTextContent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/forgetPassword_btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/red_round_bg"
        android:paddingHorizontal="5dp"
        android:paddingVertical="10dp"
        android:text="@string/submit"
        android:fontFamily="@font/abeezee"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgetPassword_etMobile" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/forgetPassword_btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@android:color/transparent"
        android:paddingHorizontal="5dp"
        android:paddingVertical="10dp"
        android:text="@string/back_to_login"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/theme_red"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="@font/abeezee"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/forgetPassword_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/theme_grey"
        android:translationZ="@dimen/cardview_compat_inset_shadow"
        android:visibility="gone"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>