<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/registration_rootLayout"
    tools:context=".LoginMech.RegistrationActivity" >

    <ImageView
        android:id="@+id/registration_ivLogo"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:src="@drawable/final_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/registration_tvTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:text="@string/registration_message"
            android:textSize="16sp"
            android:paddingHorizontal="5dp"
            android:paddingVertical="5dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:fontFamily="@font/abeezee"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registration_ivLogo"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registration_btnCustomer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/red_round_bg"
            android:paddingHorizontal="5dp"
            android:paddingVertical="10dp"
            android:fontFamily="@font/abeezee"
            android:text="@string/customer"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registration_tvTextContent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registration_btnServiceProvider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/white_round_bg"
            android:paddingHorizontal="5dp"
            android:paddingVertical="10dp"
            android:fontFamily="@font/abeezee"
            android:text="@string/service_provider"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/theme_red"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registration_btnCustomer" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registration_btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@android:color/transparent"
        android:paddingHorizontal="5dp"
        android:paddingVertical="10dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/back_to_login"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:drawableStart="@drawable/ic_back_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>