<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServiceProvider.ManagePhotos.ManagePhotosActivity"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/managePhotos_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_yellow"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/manage_photos"
            android:fontFamily="@font/abeezee"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/managePhotos_tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="5dp"
        android:text="@string/select_from_gallery"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="@font/abeezee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/managePhotos_toolbar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/managePhotos_cvImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/managePhotos_tvTitle">

        <RelativeLayout
            android:id="@+id/managePhotos_rlImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="5dp"
            android:background="@drawable/grey_round_bg"
            android:gravity="center"
            android:visibility="gone">

            <ImageView
                android:id="@+id/managePhotos_ivImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/managePhotos_llButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/managePhotos_cvImage" >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/managePhotos_btnUpload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/abeezee"
            android:text="@string/upload_images"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/red_round_bg" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/managePhotos_btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/abeezee"
            android:text="@string/update"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/red_round_bg" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/managePhotos_rvList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        android:paddingBottom="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/managePhotos_llButtons"
        android:visibility="gone" />

    <TextView
        android:id="@+id/managePhotos_tvNoImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_images_found"
        android:fontFamily="@font/abeezee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:id="@+id/managePhotos_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/theme_grey"
        android:padding="10dp"
        android:translationZ="@dimen/cardview_compat_inset_shadow"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>